Criação do MensageriaService e fluxo de processamento de pedidos, para integração com mensageria Kafka; Remoção do PedidosRepository, não será utilizado.

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,7 +8,9 @@
     },
 
     "Configuracoes": {
-        "stringConexao": "Server=DESKTOP-U7BHMHD\\SQLEXPRESS;Database=CompraApp;User Id=compraapp;Password=compraapp123;"
+        "stringConexao": "Server=DESKTOP-U7BHMHD\\SQLEXPRESS;Database=CompraApp;User Id=compraapp;Password=compraapp123;",
+        "kafkaHost": "127.0.0.1:9092",
+        "kafkaTopic": "test-topic"
     },
 
     "AllowedHosts": "*"
