--- a/KafkaConsumer/KafkaConsumer.csproj
+++ b/KafkaConsumer/KafkaConsumer.csproj
@@ -8,5 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="1.8.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 </Project>
