--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,6 +9,7 @@
 
     "Configuracoes": {
         "stringConexao": "Server=DESKTOP-U7BHMHD\\SQLEXPRESS;Database=CompraApp;User Id=compraapp;Password=compraapp123;",
+        "cacheExpirationEmSegundos": 30,
         "kafkaHost": "127.0.0.1:9092",
         "kafkaTopic": "test-topic"
     },
