--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -11,7 +11,7 @@
         "stringConexao": "Server=DESKTOP-U7BHMHD\\SQLEXPRESS;Database=CompraApp;User Id=compraapp;Password=compraapp123;",
         "cacheExpirationEmSegundos": 30,
         "kafkaHost": "127.0.0.1:9092",
-        "kafkaTopic": "test-topic"
+        "kafkaTopic": "pedidos-topic"
     },
 
     "AllowedHosts": "*"
