--- a/KafkaConsumer/appsettings.json
+++ b/KafkaConsumer/appsettings.json
@@ -10,6 +10,6 @@
     "Configuracoes": {
         "stringConexao": "Server=DESKTOP-U7BHMHD\\SQLEXPRESS;Database=CompraApp;User Id=compraapp;Password=compraapp123;",
         "kafkaHost": "127.0.0.1:9092",
-        "kafkaTopic": "test-topic"
+        "kafkaTopic": "pedidos-topic"
     }
 }
