--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,9 +8,9 @@
     },
 
     "Configuracoes": {
-        "stringConexao": "Server=DESKTOP-U7BHMHD\\SQLEXPRESS;Database=CompraApp;User Id=compraapp;Password=compraapp123;",
+        "stringConexao": "Server=db;Database=CompraApp;User Id=compraapp;Password=compraapp123;",
         "cacheExpirationEmSegundos": 30,
-        "kafkaHost": "127.0.0.1:9092",
+        "kafkaHost": "kafka:9092",
         "kafkaTopic": "pedidos-topic"
     },
 
