Ajustes para funcionamento em container

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,7 +8,7 @@
     },
 
     "Configuracoes": {
-        "stringConexao": "Server=db;Database=CompraApp;User Id=compraapp;Password=compraapp123;",
+        "stringConexao": "Server=localhost;Database=CompraApp;User Id=compraapp;Password=compraapp123;",
         "cacheExpirationEmSegundos": 30,
         "kafkaHost": "kafka:9092",
         "kafkaTopic": "pedidos-topic"
