--- a/KafkaConsumer/appsettings.json
+++ b/KafkaConsumer/appsettings.json
@@ -8,8 +8,8 @@
     },
 
     "Configuracoes": {
-        "stringConexao": "Server=db;Database=CompraApp;User Id=compraapp;Password=compraapp123;",
-        "kafkaHost": "kafka:9092",
+        "stringConexao": "Server=localhost;Database=CompraApp;User Id=compraapp;Password=compraapp123;",
+        "kafkaHost": "localhost:9092",
         "kafkaTopic": "pedidos-topic"
     }
 }
